--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "main": "index.js",
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
