--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.40.0",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
